--- a/note/templates/note/createNote_view.html
+++ b/note/templates/note/createNote_view.html
@@ -8,7 +8,7 @@ Note App -
 {% block content %}
 <div class="w-50 card mx-auto" style="margin-top: 100px;">
     <div class="card-header">
-        <a href="/home" class="btn btn-dark"> Back </a>
+        <a href="/Note/home" class="btn btn-dark"> Back </a>
     </div>
     <div class="card-body">
         <form action="" method="POST">
