--- a/users/templates/user/login_view.html
+++ b/users/templates/user/login_view.html
@@ -8,7 +8,7 @@ Note App - Login
 {% block content %}
 {% if messages %}
 {% for message in messages %}
-<div class="alert alert-danger w-50 mx-auto" , role="alert">
+<div class=" w-50 mx-auto alert alert-success m-2" , role="alert">
     {{message}}
 </div>
 {% endfor %}
